# marketplace-8l5lv5

./: .editorconfig  .gitattributes  .gitignore  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  mobile.yml  security.yml  web.yml
blitzy/documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/monitoring/grafana/dashboards/: api-gateway.json  infrastructure.json  services.json
infrastructure/monitoring/jaeger/: jaeger.yml
infrastructure/monitoring/loki/: loki.yml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/monitoring/prometheus/rules/: alerts.yml  recording.yml
infrastructure/monitoring/tempo/: tempo.yml
infrastructure/scripts/: backup.sh  init-vault.sh  restore.sh  setup-monitoring.sh
infrastructure/security/vault/: config.hcl
infrastructure/security/waf/: rules.yml
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/terraform/environments/dev/: main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/environments/prod/: main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/environments/staging/: main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/modules/documentdb/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/opensearch/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
src/android/: .gitignore  README.md  app.json  babel.config.js  index.js  metro.config.js  package.json
src/android/__tests__/: setup.ts
src/android/__tests__/hooks/: useAuth.test.ts
src/android/__tests__/utils/: validation.test.ts
src/android/android/: build.gradle  gradle.properties  settings.gradle
src/android/android/app/: build.gradle
src/android/e2e/: auth.e2e.ts  jobs.e2e.ts  profile.e2e.ts
src/android/src/hooks/: useAuth.ts  useBiometrics.ts  useJobs.ts  useKeyboard.ts  useMessages.ts  useNotifications.ts  useProfile.ts  useResponsive.ts  useWorkspace.ts
src/android/src/lib/: api.ts  auth.ts  axios.ts  storage.ts  websocket.ts
src/android/src/navigation/: AuthNavigator.tsx  DashboardNavigator.tsx  JobsNavigator.tsx  MessagesNavigator.tsx  ProfileNavigator.tsx  RootNavigator.tsx  WorkspaceNavigator.tsx
src/android/src/store/: index.ts
src/android/src/styles/: colors.ts  (+4 more)
src/backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.ts  nodemon.json  package.json  tsconfig.json
src/backend/ai-service/: Dockerfile  pyproject.toml
src/backend/ai-service/src/: config.py  main.py
src/backend/ai-service/src/api/: routes.py
src/backend/ai-service/src/models/: embedding.py  recommendation.py
src/backend/ai-service/src/services/: elasticsearch_service.py  openai_service.py
src/backend/ai-service/src/utils/: vector_utils.py
src/backend/ai-service/tests/: test_embeddings.py  test_recommendations.py
src/backend/api-gateway/: package.json  tsconfig.json
src/backend/collaboration-service/: Dockerfile  pyproject.toml
src/backend/collaboration-service/src/: config.py  main.py
src/backend/collaboration-service/src/api/: routes.py  websocket.py
src/backend/collaboration-service/src/models/: notebook.py  workspace.py
src/backend/collaboration-service/src/services/: jupyter_service.py  workspace_service.py
src/backend/collaboration-service/src/utils/: file_manager.py
src/backend/collaboration-service/tests/: test_jupyter.py  test_workspace.py
src/backend/job-service/: Dockerfile  pyproject.toml
src/backend/job-service/src/: config.py  main.py
src/backend/job-service/src/api/: dependencies.py  routes.py
src/backend/job-service/src/models/: job.py  proposal.py
src/backend/job-service/src/services/: job_service.py  matching_service.py
src/backend/job-service/src/utils/: ai_matching.py
src/backend/job-service/tests/: test_job_service.py  test_matching.py
src/backend/k8s/: ai-service.yaml  api-gateway.yaml  collaboration-service.yaml  elasticsearch.yaml  job-service.yaml  mongodb.yaml  payment-service.yaml  postgres.yaml  redis.yaml  user-service.yaml
src/backend/payment-service/: package.json  tsconfig.json
src/backend/shared/: package.json  tsconfig.json
src/backend/user-service/: package.json  tsconfig.json
src/ios/: .gitignore  Gemfile  README.md  app.json  babel.config.js  index.js  metro.config.js  package.json  tsconfig.json
src/ios/__tests__/: setup.ts
src/ios/e2e/: auth.e2e.ts  jobs.e2e.ts  profile.e2e.ts
src/web/: .env.example  .eslintrc.json  .gitignore  .prettierrc  README.md  cypress.config.ts  jest.config.ts  next-env.d.ts  next.config.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
src/web/cypress/: tsconfig.json
(+310 files in other folders)
