[tool.poetry]
name = "ai-talent-marketplace-collaboration-service"
version = "1.0.0"
description = "Collaboration Service for the AI Talent Marketplace platform providing real-time collaboration features including Jupyter notebooks, file sharing, and workspace management."
authors = ["AI Talent Marketplace Team <team@aitalentmarketplace.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.100.0"
uvicorn = "0.23.0"
pydantic = "2.0.3"
pydantic-settings = "2.0.0"
websockets = "11.0.3"
jupyter-client = "8.3.0"
nbformat = "5.9.2"
nbconvert = "7.7.2"
pymongo = "4.4.1"
redis = "4.6.0"
python-dotenv = "1.0.0"
httpx = "0.24.1"
loguru = "0.7.0"
tenacity = "8.2.2"
aiofiles = "23.1.0"
python-socketio = "5.8.0"
python-multipart = "0.0.6"
python-jose = "3.3.0"
fastapi-health = "0.4.0"
apscheduler = "3.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-cov = "4.1.0"
pytest-asyncio = "0.21.0"
black = "23.3.0"
isort = "5.12.0"
mypy = "1.3.0"
flake8 = "6.0.0"
pre-commit = "3.3.2"
fakeredis = "2.11.2"
mongomock = "4.1.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn src.main:app --host 0.0.0.0 --port 8002"
dev = "uvicorn src.main:app --host 0.0.0.0 --port 8002 --reload"
test = "pytest tests/ --cov=src --cov-report=term-missing"
lint = "flake8 src/ tests/ && mypy src/ tests/"
format = "black src/ tests/ && isort src/ tests/"