[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-talent-marketplace-job-service"
version = "1.0.0"
description = "Job Service for the AI Talent Marketplace platform providing job posting, matching, and management functionality with AI-powered recommendations."
authors = ["AI Talent Marketplace Team <team@aitalentmarketplace.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.100.0"
uvicorn = "0.22.0"
pydantic = "2.0.0"
pydantic-settings = "2.0.0"
sqlalchemy = "2.0.0"
psycopg2-binary = "2.9.6"
elasticsearch = "8.10.0"
python-dotenv = "1.0.0"
httpx = "0.24.1"
tenacity = "8.2.2"
python-jose = "3.3.0"
alembic = "1.11.1"
python-multipart = "0.0.6"
structlog = "23.1.0"
prometheus-client = "0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-cov = "4.1.0"
pytest-asyncio = "0.21.0"
black = "23.3.0"
isort = "5.12.0"
mypy = "1.3.0"
flake8 = "6.0.0"
pre-commit = "3.3.2"
faker = "18.10.0"
pytest-mock = "3.10.0"

[tool.poetry.scripts]
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
dev = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
test = "pytest tests/ --cov=src --cov-report=term-missing"
lint = "flake8 src/ tests/ && mypy src/ tests/"
format = "black src/ tests/ && isort src/ tests/"
migrate = "alembic upgrade head"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"